# WooCommerceConnector

./: pyproject.toml  setup.py
woocommerceconnector/: __init__.py  sync_orders.py
